Resolved layout issues in portfolio page. No repeat on error mentioned in the last commit

--- a/src/assets/css/portfolio.css
+++ b/src/assets/css/portfolio.css
@@ -28,7 +28,12 @@ section {
 /* === SECTIONS === */
 .panel {
   position: relative;
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .image-container {
@@ -36,10 +41,11 @@ section {
   display: flex;
   justify-content: space-between; /* pushes the .slideshow to the center */
   align-items: center;           /* centers vertically */
+  width: 100%;
   height: 80vh;                  /* or your preferred height */
   position: relative;
   margin: 0 auto;
-  padding: 0 1rem; /* some horizontal padding so buttons are not at the extreme edge */
+  padding: 1rem 1rem; /* some horizontal padding so buttons are not at the extreme edge */
 }
 
 .slideshow {
@@ -63,10 +69,10 @@ section {
 }
 
 button {
-    background: #333;
-    color: #fff;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border: none;
-    padding: 10px;
+    padding: 4rem 2rem;
     cursor: pointer;
     font-size: 20px;
 }
@@ -76,10 +82,7 @@ button:hover {
 }
 
 .text-container {
-  position: absolute;
-  top: 80vh;
   width: 100%;
-  z-index: 2;
-  background-color: var(--test-color-1);
+  height: 15vh;
 }
 
